/*
 * $Id: ChangeLog,v 1.2665 2004/03/27 17:50:01 guerra000 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-27 23:44 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tget.prg
    ! Fixed ommision for ::IsEditable() characters in ::WordLeft(),
      ::WordRight(), ::DelWordLeft(), ::DelWordRight().

2004-03-27 12:01 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tget.prg
    ! Fixed movement in ::WordLeft(), ::WordRight().

2004-03-26 14:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/rdd_ads/adsfunc.c
    + added #define ADS_REQUIRE_VERSION 6
  * contrib/rdd_ads/rddads.h
    * Converted #ifdef ADS_REQUIRE_VERSION6 to #if ADS_REQUIRE_VERSION >= 6

  /* As per agreement with Brian Hays, now, user can define the required
     Version Number as a numeric value - Default is 6 */

2004-03-26 14:38 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbf1.c
   ! fixed possible GPF in hb_dbfDrop()

  * xharbour/source/rdd/dbcmd.c
   ! begin of cleaning using s_pCurrArea/s_uiCurrArea. Now only
     the code which is buggy and can cause to GPF even with
     proper user code like in DBCOMMITALL, DBUNLOCKALL
     Then I'll fix the part which could GPF when user expression
     (index key, index filter, area filter, any while/for/eval
     filters, etc...) change workarea. Most of this changes are easy
     but some complex functions like DBEVAL, APPEND FROM/COPY TO
     and any others which operates on more then one workarea
     should be fixed very carefully. Now it's not safe to use
     any expressions with aliases in some of these functions.
     !!! This changes may cause temporary instability - I hope not.

2004-03-26 12:25 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * dox/whatsnew.txt
    + Added Brian Hays whatsnew on ADS RDD.
