@@ -1,5 +1,5 @@
 #
-# $Id: makefile.vc,v 1.93 2004/02/20 02:29:14 likewolf Exp $
+# $Id: makefile.vc,v 1.94 2004/03/16 11:37:13 andijahja Exp $
 #
 
 #
@@ -113,7 +113,7 @@ HBPDF_DIR    =contrib\pdflib
 #
 
 AS           =ML
-C_FLAGSNMT   =-G6 -Ogtyb2 -FD -Gs -GA -TP -W3 -nologo -I$(INCLUDE_DIR) -DHB_OS_WIN_32 -DSIMPLEX $(C_USR) $(CFLAGS)
+C_FLAGSNMT   =-G6 -Ogtyb2p -FD -Gs -GA -TP -W3 -nologo -I$(INCLUDE_DIR) -DHB_OS_WIN_32 -DSIMPLEX $(C_USR) $(CFLAGS)
 C_FLAGS      =$(HB_MT) $(C_FLAGSNMT)
 CLIBFLAGSNMT =-c $(C_FLAGSNMT) $(CLIBFLAGS) -D__WIN32__
 CLIBFLAGS    =-c $(C_FLAGS) $(CLIBFLAGS) -D__WIN32__
